# podobot

./: .gitignore  package.json  vercel.json
backend/: .env  .env.example  .env.vercel.example  .vercelignore  README.md  alembic.ini  architecture.html  pyproject.toml  requirements.txt  vercel.json
backend/app/: __init__.py  main.py
backend/migrations/: README.md  env.py
backend/podobot_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/public/: vercel-build.txt
backend/scripts/: vercel_build.py
backend/tests/: conftest.py  test_agents_api.py  test_auth_api.py  test_brief_generation_templates.py  test_briefs_api.py  test_buffer_integration_api.py  test_captions_api.py  test_clip_suggestion_agent.py  test_dashboard_service.py  test_discovery_api.py  test_discovery_relevance.py  test_episode_plan_api.py  test_episode_plan_generation.py  test_foundation_security.py  test_gemini_llm_provider.py  test_grok_llm_provider.py  test_groq_llm_provider.py  test_health.py  test_local_storage.py  test_mcp_api.py  test_media_pipeline_services.py  test_openai_llm_provider.py  test_outlines_api.py  test_outlines_generation.py  test_performance_mitigations.py  test_production_hardening_api.py  test_profiles_api.py  test_publishing_analytics_api.py  test_publishing_operations_api.py  test_recordings_api.py  test_research_providers.py  test_research_runs_api.py  test_research_scoring.py  test_research_sources_api.py  test_schedules_api.py  test_security_redaction.py  test_series_api.py  test_series_service.py  test_settings_api.py  test_settings_auth_rbac_api.py  (+2 more)
(+369 files in other folders)
